fix overlapping styling

--- a/css/profile.css
+++ b/css/profile.css
@@ -115,7 +115,9 @@ h3 {
     text-align: center;
 }
 
-h4 {
+.events-hosted > h4,
+.followers > h4,
+.following > h4 {
     margin: 0;
     font-size: 14px;
 }
